# pyengine

./: .gitmodules  CAny.h  CMakeLists.txt  CObject.cpp  CObject.h  README.md  ckernel.cpp  ckernel.h  class.cpp  class_meta.h  main.cpp  property_type.h  property_value.h  test_class.py
